--- a/nginx-proxy/default.conf
+++ b/nginx-proxy/default.conf
@@ -4,6 +4,13 @@ server {
 
   server_name _;
 
+
+  location / {
+      include /etc/nginx/mime.types;
+      try_files $uri /index.html;
+      root /etc/nginx/html;
+  }
+
   location /words-api/development/ {
         proxy_pass http://webapi_dev:4000/;   # note the trailing slash!
         proxy_set_header Upgrade $http_upgrade;
